Fix jinx icon spacing when there’s no wiki link

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -413,6 +413,9 @@ img.imported-icon {
     a + img {
       padding-left: 0.5em;
     }
+    span + img {
+      padding-left: 0.5em;
+    }
 
     img.jinx-icon {
       width: 1.2em;
